--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <div class="half-width">
             <h1>Stay Focused on <br><span class="orange-color">Mission 2022</span></h1>
 
-            <p>You might me jumping, climbing buildings, and stopping trains . But nobody pays me adime for that work.
-                That's why I am learning and mastering web development Hero.</p>
+            <p>One of the best programming skills you can have<br> is knowing when to walk away for a while</p><br>
             <a class="ankor-tag" href="#" target="blank">Explore Now</a><br><br><br>
             <small>Scroll down to explore more about us</small>
         </div>
@@ -48,21 +47,18 @@
         <div class="middle-width border-color1">
             <img src="images/illustrators/illustrator-1.png" alt="Loading">
             <h2>Mission</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officiis beatae nostrum soluta quod.
+            <p>My mission is I want to finish <br>programming hero course in next 6 months.
             </p>
         </div>
         <div class="middle-width border-color2">
             <img src="images/illustrators/illustrator-2.png" alt="Loading">
             <h2>Vission</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis molestias dolore laboriosam
-                impedit
-                excepturi?</p>
+            <p> Vision without action is merely a dream.</p>
         </div>
         <div class="middle-width border-color3">
             <img src="images/illustrators/illustrator-3.png" alt="Loading">
             <h2>Goals</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci minus quaerat totam molestias
-                doloribus?</p>
+            <p>My goal is i wnat to be a web developer. </p>
         </div>
 
 
@@ -74,8 +70,8 @@
         <div class="develop">
             <h2>Develop</h2>
             <h2>Without Limits</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam voluptatem, blanditiis et, accusantium
-                modi <br>illo debitis ipsa harum officiis obcaecati inventore enim quis autem.</p><br>
+            <p>“It’s hard enough to find an error in your code when you’re looking for it; it’s even harder when you’ve
+                assumed your code is error-free"</p><br>
             <a class="ankor-tag" href="#">Read the Documentation</a>
         </div>
     </section>
@@ -83,8 +79,8 @@
         <div class="develop">
             <h1>Know our</h1>
             <h1>Global Community</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque corrupti itaque, laudantium iure quasi
-                officiis perferendis eligendi? Ea minima accusantium pariatur tenetur. Iusto, unde. Assumenda.</p><br>
+            <p>Most good programmers do programming not because they expect to get paid or get adulation by the public,
+                but because it is fun to program.</p><br>
             <a class="ankor-tag" target="blank" href="#">Read the Documentation</a>
         </div>
         <div class="develop">
